# NISTRS

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: approximate.rs  block_freq.rs  cusum.rs  fft.rs  freq.rs  lib.rs  linear.rs  longest_run_of_ones.rs  overlapping_template.rs  random_excursions.rs  random_excursions_variant.rs  rank.rs  runs.rs  serial.rs  universal.rs
src/non_overlapping_template/: mod.rs  template10.rs  template11.rs  template12.rs  template13.rs  template14.rs  template15.rs  template16.rs  template2.rs  template3.rs  template4.rs  template5.rs  template6.rs  template7.rs  template8.rs  template9.rs
tests/: sha1.rs  sqrt3.rs
tests/files/: data.sqrt3
