[package]
name = "nistrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergey Negodyaev <negodyaev.sergey@outlook.com>"]
description = "his crate implements statistical tests according to the NIST standard"
readme = "README.md"
repository = "https://github.com/Omnissi/NISTRS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2"
statrs = "0.15.0"
rayon = "1.5.2"
cfg-if = "1.0.0"
rustfft = "6.0.1"

[badges]
appveyor = { repository = "Omnissi/NISTRS" }
circle-ci = { repository = "Omnissi/NISTRS" }
gitlab = { repository = "Omnissi/NISTRS" }
travis-ci = { repository = "Omnissi/NISTRS" }
codecov = { repository = "Omnissi/NISTRS" }
coveralls = { repository = "Omnissi/NISTRS" }
is-it-maintained-issue-resolution = { repository = "Omnissi/NISTRS" }
is-it-maintained-open-issues = { repository = "Omnissi/NISTRS" }