[package]
name = "nistrs"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Sergey Negodyaev <negodyaev.sergey@outlook.com>"]
description = "This crate implements statistical tests according to the NIST standard"
readme = "README.md"
repository = "https://github.com/Omnissi/NISTRS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2"
statrs = "0.15.0"
rayon = "1.5.2"
cfg-if = "1.0.0"
rustfft = "6.0.1"
